--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,29 @@ body {
     
 
 }
+
+#footer{
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    height: auto;
+    width: 100vw;
+    padding-top: 20px;
+    color: #fff;
+    padding-bottom: 20px;
+
+}
+/* code {
+    background-color: rgb(110, 110, 110);
+} */
+
+#title-center {
+    width: 100%;
+    height: 20px;
+    background-color: aqua;
+    text-align: center;
+    position: absolute
+}
