--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #111;
+    background: #E900FF;
     height: auto;
     width: 100vw;
     padding-top: 20px;
@@ -51,4 +51,8 @@ body {
     background-color: aqua;
     text-align: center;
     position: absolute
+}
+
+.nav-link{
+    width: 100%
 }
